src/main/java/com/example/footballbackend/error/ConflictResourceException.java
package com.example.footballbackend.error;

public class ConflictResourceException extends RuntimeException {
    public ConflictResourceException(String message) {
        super(message);
    }
}
